--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ace-editor-with-next",
+  "name": "nextjs-ace-editor",
   "version": "1.0.0",
   "license": "MIT",
+  "author": "lobo",
   "scripts": {
     "dev": "next",
-    "start": "NODE_ENV=production node server.js",
+    "start": "next start -p 8000",
     "build": "next build"
   },
   "dependencies": {
@@ -13,7 +14,7 @@
     "brace": "^0.11.1",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "next": "^6.1.1",
+    "next": "latest",
     "react": "^16.4.1",
     "react-ace": "^6.4.0",
     "react-ace-editor": "0.0.3",
