--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "brace": "^0.11.1",
+    "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^16.4.1",
     "react-ace": "^6.4.0",
     "react-ace-editor": "0.0.3",
