--- a/now.json
+++ b/now.json
@@ -1,4 +1,1 @@
-{
-  "version": 2,
-  "builds": [{ "src": "package.json", "use": "@now/next" }]
-}
+{ "version": 2, "builds": [{ "src": "package.json", "use": "@now/static-build" }] }
