--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "start": "next start -p 8000",
-    "build": "next build"
+    "build": "next build",
+    "now-build": "next build && next export -o dist"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -15,7 +16,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "next": "latest",
+    "next": "canary",
     "prop-types": "^15.7.2",
     "react": "^16.4.1",
     "react-ace": "^6.4.0",
