mods in now and next canary version

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "license": "MIT",
   "author": "lobo",
   "scripts": {
-    "dev": "node server.js",
-    "start": "NODE_ENV=production node server.js",
-    "build": "next build"
+    "dev": "next",
+    "start": "next start -p 8000",
+    "build": "next build",
+    "now-build": "next build && next export -o dist"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -15,8 +16,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "isomorphic-unfetch": "^3.0.0",
-    "next": "latest",
+    "next": "canary",
     "prop-types": "^15.7.2",
     "react": "^16.4.1",
     "react-ace": "^6.4.0",
