--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next",
     "start": "next start -p 8000",
     "build": "next build",
-    "now-build": "next build && next export -o dist"
+    "now-build": "next build"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
