--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
