--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "next": "canary",
     "prop-types": "^15.7.2",
     "react": "^16.4.1",
     "react-ace": "^6.4.0",
     "react-ace-editor": "0.0.3",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-moment": "^0.9.2"
   }
 }
