--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "now-build": "next build"
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.5",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
@@ -17,6 +18,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "next": "canary",
     "prop-types": "^15.7.2",
