--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "express": "^4.16.4",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
-    "next": "canary",
+    "next": "^9.0.3",
     "prop-types": "^15.7.2",
-    "react": "^16.4.1",
+    "react": "^16.8.6",
     "react-ace": "^6.4.0",
     "react-ace-editor": "0.0.3",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.8.6",
     "react-moment": "^0.9.2"
-  }
+  },
+  "devDependencies": {}
 }
