--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next",
     "start": "next start -p 8000",
     "build": "next build",
-    "now-build": "next build"
+    "now-build": "next build",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@date-io/moment": "^1.3.5",
@@ -28,5 +29,15 @@
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "husky": "^3.0.3",
+    "lint-staged": "^9.2.1",
+    "prettier": "^1.18.2"
+  },
+  "lint-staged": {
+    "*.js": [
+      "node_modules/.bin/prettier --single-quote --no-semi --write --tab-width 2",
+      "git add"
+    ]
+  }
 }
