--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.1",
+    "body-parser": "^1.19.0",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
@@ -26,8 +27,10 @@
     "react": "^16.8.6",
     "react-ace": "^6.4.0",
     "react-ace-editor": "0.0.3",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
-    "react-moment": "^0.9.2"
+    "react-moment": "^0.9.2",
+    "store": "^2.0.12"
   },
   "devDependencies": {
     "husky": "^3.0.3",
