--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.8.6",
     "react-ace": "^6.4.0",
     "react-ace-editor": "0.0.3",
+    "react-awesome-modal": "^2.0.5",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
