--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@date-io/moment": "^1.3.5",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.1",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
@@ -32,6 +32,7 @@
     "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
+    "request": "^2.88.0",
     "store": "^2.0.12"
   },
   "devDependencies": {
