--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^3.0.3",
     "lint-staged": "^9.2.1",
+    "next-progressbar": "^1.0.0",
     "prettier": "^1.18.2"
   },
   "lint-staged": {
