Change how the frontend process is started from a docker container
- Add a script in the package.json:
	- It will build and run the frontend
- Fix in the Dockerfile:
	- Make use of the new script
	- Remove the build step
	- Remove unneeded steps: env, mkdir and copy of package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next",
     "start": "next start -p 8000",
     "build": "next build",
+    "docker-build": "next build && next start -p 8000",
     "now-build": "next build",
     "precommit": "lint-staged"
   },
