--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "fetch-retry": "^2.2.3",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "next": "^9.0.3",
