--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "dependencies": {
     "@date-io/moment": "^1.3.5",
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "next": "^9.0.3",
     "notistack": "^0.8.9",
